[gd_scene load_steps=22 format=3 uid="uid://dc1gr1toccny1"]

[ext_resource type="Texture2D" uid="uid://kjwn6xxso0eu" path="res://scenes/game_object/basic_enemy/basic_enemy.png" id="1_cleia"]
[ext_resource type="Script" path="res://scenes/game_object/basic_enemy/basic_enemy.gd" id="1_hl35s"]
[ext_resource type="PackedScene" uid="uid://bsmhivc0yb4we" path="res://scenes/component/random_stream_player_2d_component.tscn" id="2_eiio1"]
[ext_resource type="PackedScene" uid="uid://dty6qc15obu6g" path="res://scenes/component/health_component.tscn" id="2_g048o"]
[ext_resource type="AudioStream" uid="uid://bnd8wba5fw2mh" path="res://assets/audio/footstep_carpet_000.ogg" id="2_vvy4g"]
[ext_resource type="PackedScene" uid="uid://by5id6qbwx6ol" path="res://scenes/component/vial_drop_component.tscn" id="3_6g0lw"]
[ext_resource type="PackedScene" uid="uid://7bg2nfxngekx" path="res://scenes/component/velocity_component.tscn" id="3_qaruk"]
[ext_resource type="PackedScene" uid="uid://den4ovx5roo6h" path="res://scenes/component/death_component.tscn" id="4_7fpan"]
[ext_resource type="AudioStream" uid="uid://d2ndylrv851f1" path="res://assets/audio/footstep_carpet_001.ogg" id="4_fvke6"]
[ext_resource type="PackedScene" uid="uid://bfpb5wcinlqg4" path="res://scenes/component/hurtbox_component.tscn" id="4_kiwee"]
[ext_resource type="AudioStream" uid="uid://bq67kt23800m5" path="res://assets/audio/footstep_carpet_002.ogg" id="5_fv4v4"]
[ext_resource type="PackedScene" uid="uid://c51701536hr8h" path="res://scenes/component/hit_flash_component.tscn" id="5_nlswk"]
[ext_resource type="Shader" path="res://scenes/component/hit_flash_component.gdshader" id="6_oq41g"]
[ext_resource type="AudioStream" uid="uid://dr3iqrfbfdtno" path="res://assets/audio/footstep_carpet_003.ogg" id="6_x4ksy"]
[ext_resource type="AudioStream" uid="uid://djdgcj3y23uaw" path="res://assets/audio/footstep_carpet_004.ogg" id="7_vx1k6"]

[sub_resource type="Animation" id="Animation_qx7av"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_tpkex"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.174533, -0.174533, 0.174533, -0.174533]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1, 0), Vector2(1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8k8bo"]
_data = {
"RESET": SubResource("Animation_qx7av"),
"walk": SubResource("Animation_tpkex")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_io01l"]
resource_local_to_scene = true
shader = ExtResource("6_oq41g")
shader_parameter/lerp_percent = null

[sub_resource type="CircleShape2D" id="CircleShape2D_hwl7r"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_8k6gb"]
radius = 5.0

[node name="basic_enemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 9
motion_mode = 1
script = ExtResource("1_hl35s")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8k8bo")
}
autoplay = "walk"

[node name="HitRandomAudioPlayerComponent" parent="." instance=ExtResource("2_eiio1")]
streams = Array[AudioStream]([ExtResource("2_vvy4g"), ExtResource("4_fvke6"), ExtResource("5_fv4v4"), ExtResource("6_x4ksy"), ExtResource("7_vx1k6")])

[node name="HealthComponent" parent="." instance=ExtResource("2_g048o")]

[node name="VelocityComponent" parent="." instance=ExtResource("3_qaruk")]

[node name="VialDropComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_6g0lw")]
drop_percent = 0.35
health_component = NodePath("../HealthComponent")

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("5_nlswk")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Sprite2D")
hit_flash_material = SubResource("ShaderMaterial_io01l")

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("4_7fpan")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Sprite2D")

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_kiwee")]
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_hwl7r")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_cleia")
offset = Vector2(0, -4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_8k6gb")
